fix: added dark mode styling

--- a/src/components/CommunityPortal/CPDashboard.module.css
+++ b/src/components/CommunityPortal/CPDashboard.module.css
@@ -291,3 +291,6 @@
   font-style: italic;
   color:#6b7280;
 }
+.darkMain .noEvents {
+  color: #9ca3af;
+}
